cmake_minimum_required(VERSION 3.2)

PROJECT(luaredis)
INCLUDE(cmake/ModuleImport.cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(LUAREDIS_VERSION_MAJOR "1")
SET(LUAREDIS_VERSION_MINOR "0")
SET(LUAREDIS_VERSION_PATCH "1")
SET(LUAREDIS_VERSION "${LUAREDIS_VERSION_MAJOR}.${LUAREDIS_VERSION_MINOR}.${LUAREDIS_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${LUAREDIS_VERSION}")

ADD_DEFINITIONS(-DUSE_LUAREDIS -D_FILE_OFFSET_BITS=64 -DLUA_COMPAT_MODULE -DLUA_COMPAT_APIINTCASTS)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

FILE(GLOB DMLUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
)

LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

FILE(GLOB LUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
)

FILE(GLOB LUAREDIS_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis/*.h
)

FILE(GLOB HIREDIS_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/hiredis/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/hiredis/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/hiredis/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/hiredis/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/hiredis/*.h
)

LIST(FILTER HIREDIS_SOURCES EXCLUDE REGEX "test.c$")

IF (WIN32)
    LIST(APPEND LUAREDIS_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE LUAREDISTEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
    ADD_LIBRARY(hiredis ${HIREDIS_SOURCES})
 
    ADD_LIBRARY(luaredis SHARED ${LUAREDIS_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/luaredis/luaredis_module.def)
    TARGET_LINK_LIBRARIES(luaredis lua53 hiredis)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)

    ADD_EXECUTABLE(luaredistest ${LUAREDISTEST_SOURCES})
    TARGET_LINK_LIBRARIES(luaredistest luaredis)
    
    SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
    SET_TARGET_PROPERTIES(luaredis PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")
    SET_TARGET_PROPERTIES(luaredistest PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
ELSEIF (APPLE)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luaredis SHARED ${LUAREDIS_SOURCES})
    TARGET_LINK_LIBRARIES(luaredis lua53)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)

    ADD_EXECUTABLE(luaredistest ${LUAREDISTEST_SOURCES})
    TARGET_LINK_LIBRARIES(luaredistest luaredis)
ELSEIF (UNIX)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luaredis SHARED ${LUAREDIS_SOURCES})
    TARGET_LINK_LIBRARIES(luaredis lua53)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53 m)
    
    ADD_EXECUTABLE(luaredistest ${LUAREDISTEST_SOURCES})
    TARGET_LINK_LIBRARIES(luaredistest luaredis)
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET luaredistest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:luaredistest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS luaredis
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(LUAREDIS_LIBS "luaredis")
#MARK_AS_ADVANCED(${LUAREDIS_LIBS})